@@ -1,3 +1,6 @@
+        * operator% is now conditionally supported for arithmetic types,
+          provided that the underlying type supports the operation.
+
 v3 2021-08-02
 
         * increment/decrement operators are now hidden friends
